styles/_top-nav.scss
/* ... */
// Fix so anchors don't jump under the fixed header ----------------------------
article h1:before,
article h2:before,
article h3:before,
article h4:before,
article h5:before,
article h6:before,
.interactive-block:before {
  display: block;
  content: " ";
  margin-top: -24px;
  height: 60px;
  visibility: hidden;
  pointer-events: none;
}

// Fix so links aren't unclickable underneath the header anchor-fix
a {
  z-index: 1;
}

// Animated chevron (e.g. for language dropdown) -------------------------------

.chevron {
  position: relative;
  display: inline-block;
  width: 0.75rem;
  height: 0.5625rem;

  span {
    position: absolute;
    top: 0.25rem;
    display: inline-block;
    width: 0.5rem;
    height: 0.15rem;
    background-color: $blue-purple-400;
    transition: all 0.2s ease;
    border: none;
  }
  &:not(.expander) span {
    &:first-of-type {
      left: 0;
      transform: rotate(45deg);
    }
    &:last-of-type {
      right: 0;
      transform: rotate(-45deg);
    }
  }

  &.active {
    span:first-of-type {
      transform: rotate(-45deg);
    }
    span:first-of-type {
      transform: rotate(45deg);
    }
  }
}

.dropdown.show .chevron,
.expander:not(.collapsed) .chevron {
  span:first-of-type {
    transform: rotate(-45deg);
  }
  span:last-of-type {
    transform: rotate(45deg);
  }
}

#topnav-theme > div {
  border-radius: var(--language-picker-border-radius);
  color: var(--language-picker-text-color);
  background-color: var(--language-picker-background-color);
  border: 1px solid var(--language-picker-border-color);
  padding: var(--language-picker-input-padding-vertical) var(--language-picker-input-padding-horizontal);
  min-height: var(--language-picker-min-height);
}

// Fix dropdown box-shadows on mobile (language selector's shadow overlaps the
// rest of the menu, so it's offset more with a negative spread)
@include media-breakpoint-down(md) {
  .navbar-collapse,
  .dropdown-menu {
    box-shadow: 0px 25px 40px -20px $black;
  }
}

